<resources>
    <string name="app_name">The Movies</string>
    <string name="movie_catalog">TVShow Catalog</string>
    <string name="movie_title">Movie title</string>
    <string name="director_label">Director: </string>
    <string name="director_name">Director name</string>
    <string name="cast">Cast</string>
    <string name="actor_1">Actor 1</string>
    <string name="actor_2">Actor 2</string>
    <string name="actor_3">Actor 3</string>
    <string name="actor_4">Actor 4</string>
    <string name="release_date_label">Release date:</string>
    <string name="cancel">Cancel</string>

    <!-- Error messages -->
    <string name="error_common">Something went wrong!</string>
    <string name="error_common_try_later">Something went wrong! Please try later!</string>
    <string name="error_internet_connection">Please check your internet connection and try again.</string>
    <string name="premiered">Premiered :</string>
    <string name="ended">Ended :</string>
    <string name="official_site">Official site :</string>
</resources>