<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_black"
    tools:context=".ui.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/movie_title"
            android:textColor="@color/textColorLightGray"
            android:textSize="@dimen/text_big"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_poster">

        </TextView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_poster,movie_title"
            tools:layout_editor_absoluteY="484dp">

        </androidx.constraintlayout.widget.Barrier>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/textColorLightGray"
            android:textSize="@dimen/text_body"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/barrier">

        </TextView>

        <TextView
            android:id="@+id/actor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sub_half"
            android:layout_marginBottom="@dimen/margin_sub_half"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/actors"
            android:textColor="@color/textColorLightGray"
            android:textSize="@dimen/text_title"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/description">

        </TextView>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sub_half"
            app:constraint_referenced_ids="actor_1,actor_2,actor_3,actor_4"
            app:flow_firstHorizontalBias="0"
            app:flow_firstVerticalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/actor_label" />


        <TextView
            android:id="@+id/actor_1"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_1"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:id="@+id/actor_2"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_2"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:id="@+id/actor_3"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_3"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:id="@+id/actor_4"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_4"
            android:textColor="@color/black">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>